Added ref to Powder table in SX, PowN, IsoSqw comps added new refs to MSCAT etc in IsoSqw updated source param table in source gen
git-svn-id: https://svn.mccode.org/svn/McStasTeX@134 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/Single_crystal.tex
+++ b/trunk/Single_crystal.tex
@@ -484,7 +484,7 @@ Any line beginning with any character of \verb+#;/%+ is considered to be a
 comment, and lines which can not be read as vectors/matrices are ignored.
 Example data \verb+*.lau+ files are given in directory \verb+MCSTAS/data+.
 Powder files from ICSD/LAZY \cite{icsd_ill} and Fullprof \cite{Fullprof}
-may also be used, but as the equivalent $\vec q$ vectors are superposed, not
+may also be used (see Table \ref{t:powders-data}, page \pageref{t:powders-data}), but as the equivalent $\vec q$ vectors are superposed, not
 all Bragg spots will be simulated, and the intensity will be scaled by the
-multiplicity for each the spot.
+multiplicity for each spot.
 
