--- a/trunk/comp.tex
+++ b/trunk/comp.tex
@@ -195,7 +195,7 @@ Zr.laz             & 6.44      & 0.02     &0.185     &2128      &3800&\\
       \hline
     \end{tabular}\end{small}
     \caption{Powders of the \MCS\ library \cite{icsd_ill,ILLblue}. Low $c$ and high $\sigma_{abs}$ materials are highlighted.}
-    \label{t:material-data}
+    \label{t:powders-data}
     \index{Library!Components!data}
     }
   \end{center}
