--- a/trunk/mcstas.bib
+++ b/trunk/mcstas.bib
@@ -402,3 +402,26 @@
    pages     = {233}
 }
 
+@article{msc,
+   author    = {Bischoff FG and Yeater ML and Moore WE},
+   journal   = {Nuclear Science and Engineering},
+   year      = {1972},
+   volume    = {48},
+   pages     = {266}
+}
+
+@article{mscat,
+   author    = {J.R.D Copley},
+   journal   = {Comput. Phys. Commun.},
+   year      = {1974},
+   volume    = {7},
+   pages     = {289}
+}
+
+@article{discus,
+   author    = {M.W. Johnson},
+   journal   = {Harwell report},
+   year      = {March 1974},
+   volume    = {AERE - R 7682}
+}
+
