--- a/trunk/source_gen.tex
+++ b/trunk/source_gen.tex
@@ -23,7 +23,7 @@ are given in Table~\ref{t:source-params}. As nobody knows exactly the characteri
     \hline
     PSI cold source & 150.4  & 3.67e11   & 38.74 & 3.64e11    & 14.84& 0.95e11   & * $I_{\rm target}$~(mA)\\
     ILL VCS (H1)    & 216.8  & 1.24e13   & 33.9  & 1.02e13    & 16.7 & 3.042e12  &\\
-    ILL HCS (H5)    & 413.5  & 10.22e12  & 145.8 & 3.44e13    & 40.1 & 2.78e13   & *2\\
+    ILL HCS (H5)    & 413.5  & 10.22e12  & 145.8 & 3.44e13    & 40.1 & 2.78e13   &\\
     ILL Thermal(H2) & 683.7  & 5.874e12  & 257.7 & 2.51e13    & 16.7 & 1.034e12  & /2.25\\
     ILL Hot source  & 1695   & 1.74e13   & 708   & 3.9e12     &      &           &\\ \hline
     \end{tabular}
