Added ref to list of liquids
git-svn-id: https://svn.mccode.org/svn/McStasTeX@136 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/isotropic_sqw.tex
+++ b/trunk/isotropic_sqw.tex
@@ -332,6 +332,8 @@ Some \verb+sqw+ data files are included in the \MCS\ distribution data directory
 Isotropic_Sqw(<geometry parameters>, Sqw_coh="He4.sqw", T=10)
 \end{verbatim}
 
+A table of $S(q,\omega)$ data files for a few liquids are listed in Table \ref{t:liquids-data} (page \pageref{t:liquids-data}).
+
 \subsubsection{File formats: $S(q)$ liquids}
 
 This file format provides a mean to import directly an $S(q)$ data set, when setting parameters:
